adding admin upload endpoint. need to refactor upload code
