# src/main/java/org/dalnservice/controller/DALNService.java
@@ -350,6 +350,59 @@ public class DALNService {
     }
 
     @POST
+    @Path("/asset/s3AdminUpload")
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.TEXT_PLAIN)
+    public String s3AdminUpload(JSONObject input) throws IOException {
+        AmazonS3 s3 = AmazonS3ClientBuilder.defaultClient();
+        String bucketName = System.getenv("bucketname");
+        String objectKey = input.get("objectKey").toString();
+        String contentType = input.get("contentType").toString();
+
+        /*
+         * if(contentType.contains("audio")) { new Thread(() -> { try {
+         * 
+         * } catch (IOException e) { e.printStackTrace(); } }).start(); }
+         */
+
+        try {
+            System.out.println("Generating pre-signed URL.");
+            java.util.Date expiration = new java.util.Date();
+            long milliSeconds = expiration.getTime();
+            milliSeconds += 1000 * 60 * 60; // Add 1 hour.
+            expiration.setTime(milliSeconds);
+
+            GeneratePresignedUrlRequest generatePresignedUrlRequest = new GeneratePresignedUrlRequest(bucketName,
+                    objectKey);
+            generatePresignedUrlRequest.setMethod(HttpMethod.PUT);
+            generatePresignedUrlRequest.setExpiration(expiration);
+            generatePresignedUrlRequest.setContentType(contentType);
+            generatePresignedUrlRequest.addRequestParameter(Headers.S3_CANNED_ACL,
+                    CannedAccessControlList.PublicRead.toString());
+
+            URL url = s3.generatePresignedUrl(generatePresignedUrlRequest);
+
+            logger.debug("Pre-Signed URL = " + url.toString());
+            return url.toString();
+        } catch (AmazonServiceException exception) {
+            logger.debug("Caught an AmazonServiceException,  " + "which means your request made it "
+                    + "to Amazon S3, but was rejected with an error response " + "for some reason.");
+            logger.debug("Error Message: " + exception.getMessage());
+            logger.debug("HTTP  Code: " + exception.getStatusCode());
+            logger.debug("AWS Error Code:" + exception.getErrorCode());
+            logger.debug("Error Type:    " + exception.getErrorType());
+            logger.debug("Request ID:    " + exception.getRequestId());
+        } catch (AmazonClientException ace) {
+            logger.debug("Caught an AmazonClientException, " + "which means the client encountered "
+                    + "an internal error while trying to communicate" + " with S3, "
+                    + "such as not being able to access the network.");
+            logger.debug("Error Message: " + ace.getMessage());
+        }
+        return "Pre-signed URL not generated";
+
+    }
+
+    @POST
     @Path("/asset/test")
     @Consumes(MediaType.TEXT_PLAIN)
     public void test(String input) {
